UI logical modifying

--- a/PetoiSerialSwift/Base.lproj/Main.storyboard
+++ b/PetoiSerialSwift/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CB8-0W-xn1">
-                                <rect key="frame" x="20" y="200" width="100" height="45"/>
+                                <rect key="frame" x="20" y="246" width="100" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Calibration">
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6dU-ZK-wUT">
-                                <rect key="frame" x="148" y="200" width="100" height="45"/>
+                                <rect key="frame" x="148" y="246" width="100" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Rest">
@@ -49,7 +49,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7tZ-ND-swb">
-                                <rect key="frame" x="294" y="200" width="100" height="45"/>
+                                <rect key="frame" x="294" y="246" width="100" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Gyroscope">
@@ -60,7 +60,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Ds-jg-dpe">
-                                <rect key="frame" x="20" y="122" width="100" height="45"/>
+                                <rect key="frame" x="20" y="60" width="100" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <state key="normal" title="Search">
@@ -70,32 +70,36 @@
                                     <action selector="searchBtnPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="LwJ-6F-D0J"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hKD-Ct-7vv">
-                                <rect key="frame" x="128" y="128" width="229" height="34"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RL6-u1-LXW">
+                                <rect key="frame" x="20" y="126" width="100" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Mb-d0-AVO">
-                                <rect key="frame" x="365" y="129" width="29" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="list.dash" catalog="system"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <state key="normal" title="Connect">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="unfoldBtnPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="DmT-HZ-jBu"/>
+                                    <action selector="searchBtnPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="esU-Df-xcW"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yjd-uY-6M8">
+                                <rect key="frame" x="128" y="60" width="266" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="bleDevicesText" destination="hKD-Ct-7vv" id="tcK-Pm-TM2"/>
                         <outlet property="bleSearchBtn" destination="6Ds-jg-dpe" id="9TF-7M-3Mg"/>
                         <outlet property="calibrationBtn" destination="CB8-0W-xn1" id="5V9-Et-wZx"/>
+                        <outlet property="connectBtn" destination="RL6-u1-LXW" id="6Rn-ZH-Yt9"/>
                         <outlet property="gyroscopeBtn" destination="7tZ-ND-swb" id="7GC-sc-QXU"/>
                         <outlet property="outputTextView" destination="8xJ-Cg-6CC" id="xYP-oR-1PN"/>
                         <outlet property="restBtn" destination="6dU-ZK-wUT" id="GIs-SV-kft"/>
-                        <outlet property="unfoldBtn" destination="9Mb-d0-AVO" id="XE0-ZD-jSZ"/>
+                        <outlet property="selectedDeviceLabel" destination="Yjd-uY-6M8" id="Z63-gp-JTn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -119,7 +123,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="list.dash" catalog="system" width="128" height="85"/>
         <namedColor name="AccentColor">
             <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
