--- a/PetoiSerialSwift/Base.lproj/Main.storyboard
+++ b/PetoiSerialSwift/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="PetoiSerialSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainVC" id="BYZ-38-t0r" customClass="MainViewController" customModule="PetoiSerialSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,9 +33,6 @@
                                 <state key="normal" title="Calibration">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <segue destination="XVh-FX-yVz" kind="show" id="QsD-34-ukf"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6dU-ZK-wUT">
                                 <rect key="frame" x="148" y="246" width="100" height="45"/>
@@ -88,6 +85,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UPB-c4-N79">
+                                <rect key="frame" x="321" y="490" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="showBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lk6-81-PVv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -109,17 +114,17 @@
         <!--Calibration View Controller-->
         <scene sceneID="5fj-QL-2PN">
             <objects>
-                <viewController id="XVh-FX-yVz" customClass="CalibrationViewController" customModule="PetoiSerialSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalibrationVC" id="XVh-FX-yVz" customClass="CalibrationViewController" customModule="PetoiSerialSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JTZ-mw-Hiu">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EmB-iW-8fK">
-                                <rect key="frame" x="184" y="376" width="46" height="30"/>
+                                <rect key="frame" x="184" y="342" width="46" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
-                                    <segue destination="pQR-zD-F9i" kind="unwind" unwindAction="closeWithSegue:" id="Iay-ni-fX0"/>
+                                    <action selector="exitBtnPressed:" destination="XVh-FX-yVz" eventType="touchUpInside" id="g9J-vF-GQO"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -129,9 +134,8 @@
                     <navigationItem key="navigationItem" id="zYB-ey-9Lq"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UGf-b0-axB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="pQR-zD-F9i" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="952" y="76"/>
+            <point key="canvasLocation" x="950.72463768115949" y="75.669642857142847"/>
         </scene>
     </scenes>
     <resources>
